--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Linux : Linux kernel source tree" />
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
-    <title>Linux</title>
+    <title>Linux by Distrotech</title>
   </head>
 
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/Distrotech/linux">View on GitHub</a>
+    <header>
+      <div class="container">
+        <h1>Linux</h1>
+        <h2>Linux kernel source tree</h2>
 
-          <h1 id="project_title">Linux</h1>
-          <h2 id="project_tagline">Linux kernel source tree</h2>
+        <section id="downloads">
+          <a href="https://github.com/Distrotech/linux/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/Distrotech/linux/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/Distrotech/linux" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/Distrotech/linux/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/Distrotech/linux/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <div class="container">
+      <section id="main_content">
         <pre><code>    Linux kernel release 3.x &lt;http://kernel.org/&gt;
 </code></pre>
 
@@ -459,15 +456,6 @@ disregards the starting offset for which the kernel is compiled.</p>
       </section>
     </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Linux maintained by <a href="https://github.com/Distrotech">Distrotech</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
     
-
   </body>
 </html>
